[metadata]
name = gochan
version = 0.1.0
author = anon
description = 5ch browser which works on a terminal
url = https://github.com/anon774/gochan
license = MIT

[options]
install_requires = 
    asciimatics    
    bs4
    lxml
packages = find:

[options.entry_points]
console_scripts =
    gochan = gochan.__main__:main

[options.packages.find]
exclude = 
    tests

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120
ignore = F401

[mypy]
ignore_missing_imports = True

[isort]
line_length = 120
skip = .git, .tox, .venv, .eggs, build, dist, docs
