[metadata]
name = gochan
version = 0.3.0
author = anon
description = 5ch browser which works on a terminal
url = https://github.com/anon774/gochan
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = False
install_requires = 
    asciimatics    

[options.entry_points]
console_scripts =
    gochan = gochan.__main__:main

[options.packages.find]
exclude = 
    tests

[flake8]
exclude = .git, .tox, .venv, .eggs, build, dist, docs
max-line-length = 120

[mypy]
ignore_missing_imports = True

[isort]
line_length = 120
skip = .git, .tox, .venv, .eggs, build, dist, docs
